--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-camera": "^17.0.10",
+    "expo-file-system": "^18.0.12",
     "expo-image-picker": "^17.0.10",
+    "expo-image-manipulator": "^14.0.7",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
     "openai": "^6.15.0",
