--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
     "@google/generative-ai": "^0.24.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-camera": "^17.0.10",
     "expo-file-system": "^18.0.12",
-    "expo-image-picker": "^17.0.10",
     "expo-image-manipulator": "^14.0.7",
+    "expo-image-picker": "^17.0.10",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
     "openai": "^6.15.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-web": "^0.21.0",
     "uuid": "^13.0.0",
     "zustand": "^5.0.9"
   },
