--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Expo Web to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: ["papa"]
 
 permissions:
   contents: read
