--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.13.2",
+    "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.30",
     "expo-camera": "^17.0.10",
     "expo-file-system": "^18.0.12",
