--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
     "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.13.2",
@@ -20,7 +21,6 @@
     "expo-image-picker": "^17.0.10",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
-    "openai": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
